/cp 2011-10-09  Paolo Carlini  <paolo.carlini@oracle.com>

PR c++/38980
	* init.c (constant_value_1): Add bool parameter.
	(decl_constant_value_safe): Add.
	(integral_constant_value): Adjust.
	(decl_constant_value): Adjust.
	* cp-tree.h (decl_constant_value_safe): Declare.
	* typeck.c (decay_conversion): Use decl_constant_value_safe.
	* call.c (convert_like_real): Likewise.

/testsuite
2011-10-09  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/38980
	* g++.dg/warn/format5.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@179731 138bc75d-0d04-0410-961f-82ee72b054a4